// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatTerminal > clean report shows all-clear message 1`] = `
"
Health Score: 100 / 100

All checks passed. Your dependencies look healthy.
"
`;

exports[`formatTerminal > full report with data in every section matches snapshot 1`] = `
"
Health Score: 42 / 100

Outdated Packages
[90m┌─────────[39m[90m┬─────────[39m[90m┬────────[39m[90m┬───────[39m[90m┬───────────┐[39m
[90m│[39m[31m Package [39m[90m│[39m[31m Current [39m[90m│[39m[31m Latest [39m[90m│[39m[31m Bump  [39m[90m│[39m[31m Abandoned [39m[90m│[39m
[90m├─────────[39m[90m┼─────────[39m[90m┼────────[39m[90m┼───────[39m[90m┼───────────┤[39m
[90m│[39m lodash  [90m│[39m 4.0.0   [90m│[39m 5.0.0  [90m│[39m MAJOR [90m│[39m no        [90m│[39m
[90m├─────────[39m[90m┼─────────[39m[90m┼────────[39m[90m┼───────[39m[90m┼───────────┤[39m
[90m│[39m express [90m│[39m 4.18.0  [90m│[39m 4.19.0 [90m│[39m MINOR [90m│[39m no        [90m│[39m
[90m├─────────[39m[90m┼─────────[39m[90m┼────────[39m[90m┼───────[39m[90m┼───────────┤[39m
[90m│[39m chalk   [90m│[39m 5.3.0   [90m│[39m 5.3.1  [90m│[39m PATCH [90m│[39m no        [90m│[39m
[90m├─────────[39m[90m┼─────────[39m[90m┼────────[39m[90m┼───────[39m[90m┼───────────┤[39m
[90m│[39m old-lib [90m│[39m 1.0.0   [90m│[39m 2.0.0  [90m│[39m MAJOR [90m│[39m yes       [90m│[39m
[90m└─────────[39m[90m┴─────────[39m[90m┴────────[39m[90m┴───────[39m[90m┴───────────┘[39m

Unused Dependencies
  unused-package
  another-unused

Missing from package.json
  missing-dep

Bundle Size — Heavy Packages
  Total gzip across analyzed packages: 71.5 kB
[90m┌─────────[39m[90m┬─────────[39m[90m┬──────────[39m[90m┬─────────────┐[39m
[90m│[39m[31m Package [39m[90m│[39m[31m Gzip    [39m[90m│[39m[31m Size     [39m[90m│[39m[31m Alternative [39m[90m│[39m
[90m├─────────[39m[90m┼─────────[39m[90m┼──────────[39m[90m┼─────────────┤[39m
[90m│[39m moment  [90m│[39m 70.3 kB [90m│[39m 283.2 kB [90m│[39m date-fns    [90m│[39m
[90m└─────────[39m[90m┴─────────[39m[90m┴──────────[39m[90m┴─────────────┘[39m

License Report
  Total packages analyzed: 2
  Conflicts detected:
[90m┌──────────────────[39m[90m┬─────────[39m[90m┬─────────┐[39m
[90m│[39m[31m Package          [39m[90m│[39m[31m Version [39m[90m│[39m[31m License [39m[90m│[39m
[90m├──────────────────[39m[90m┼─────────[39m[90m┼─────────┤[39m
[90m│[39m some-gpl-package [90m│[39m 1.0.0   [90m│[39m GPL-3.0 [90m│[39m
[90m└──────────────────[39m[90m┴─────────[39m[90m┴─────────┘[39m

Analyzer Errors
  [bundleSize] bundlephobia API timed out
  [licenses] Could not read node_modules
"
`;

exports[`formatTerminal > report with errors shows analyzer errors section 1`] = `
"
Health Score: 100 / 100

Analyzer Errors
  [outdated] registry is down
"
`;

exports[`formatTerminal > report with heavy bundle packages shows bundle section 1`] = `
"
Health Score: 70 / 100

Bundle Size — Heavy Packages
  Total gzip across analyzed packages: 70.3 kB
[90m┌─────────[39m[90m┬─────────[39m[90m┬──────────[39m[90m┬─────────────┐[39m
[90m│[39m[31m Package [39m[90m│[39m[31m Gzip    [39m[90m│[39m[31m Size     [39m[90m│[39m[31m Alternative [39m[90m│[39m
[90m├─────────[39m[90m┼─────────[39m[90m┼──────────[39m[90m┼─────────────┤[39m
[90m│[39m moment  [90m│[39m 70.3 kB [90m│[39m 283.2 kB [90m│[39m date-fns    [90m│[39m
[90m└─────────[39m[90m┴─────────[39m[90m┴──────────[39m[90m┴─────────────┘[39m
"
`;

exports[`formatTerminal > report with license conflicts shows conflicts table 1`] = `
"
Health Score: 60 / 100

License Report
  Total packages analyzed: 1
  Conflicts detected:
[90m┌──────────────────[39m[90m┬─────────[39m[90m┬─────────┐[39m
[90m│[39m[31m Package          [39m[90m│[39m[31m Version [39m[90m│[39m[31m License [39m[90m│[39m
[90m├──────────────────[39m[90m┼─────────[39m[90m┼─────────┤[39m
[90m│[39m some-gpl-package [90m│[39m 1.0.0   [90m│[39m GPL-3.0 [90m│[39m
[90m└──────────────────[39m[90m┴─────────[39m[90m┴─────────┘[39m
"
`;

exports[`formatTerminal > report with licenses but no conflicts shows no-conflict message 1`] = `
"
Health Score: 100 / 100

License Report
  Total packages analyzed: 1
  No license conflicts found.

All checks passed. Your dependencies look healthy.
"
`;

exports[`formatTerminal > report with missing-from-package.json entries shows that section 1`] = `
"
Health Score: 90 / 100

Missing from package.json
  implicit-dep
"
`;

exports[`formatTerminal > report with only outdated packages shows only that section 1`] = `
"
Health Score: 75 / 100

Outdated Packages
[90m┌─────────[39m[90m┬─────────[39m[90m┬────────[39m[90m┬───────[39m[90m┬───────────┐[39m
[90m│[39m[31m Package [39m[90m│[39m[31m Current [39m[90m│[39m[31m Latest [39m[90m│[39m[31m Bump  [39m[90m│[39m[31m Abandoned [39m[90m│[39m
[90m├─────────[39m[90m┼─────────[39m[90m┼────────[39m[90m┼───────[39m[90m┼───────────┤[39m
[90m│[39m lodash  [90m│[39m 4.0.0   [90m│[39m 5.0.0  [90m│[39m MAJOR [90m│[39m no        [90m│[39m
[90m└─────────[39m[90m┴─────────[39m[90m┴────────[39m[90m┴───────[39m[90m┴───────────┘[39m
"
`;

exports[`formatTerminal > report with only unused deps shows only that section 1`] = `
"
Health Score: 80 / 100

Unused Dependencies
  dead-dep
"
`;
